fix: fixes the template rooms.html to correctly get the isAuditorium variable

--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -71,7 +71,7 @@
                             <td th:text="${room.id}" />
                             <td th:text="${room.number}" />
                             <td th:text="${room.seats}" />
-                            <td th:text="${room.is_auditorium}"></td>
+                            <td th:text="${room.isAuditorium}"></td>
                             <td th:text="${room.building.name}"></td>
                         </tr>
                     </tbody>
