fix:makes that it is not possible to submit the new student form when matNr is empty or no int

--- a/src/main/resources/templates/edit_student.html
+++ b/src/main/resources/templates/edit_student.html
@@ -42,7 +42,7 @@
                     <div class="field">
                         <label class="label">Matr. Nr.</label>
                         <div class="control">
-                            <input class="input" type="text" placeholder="12345678" th:field="*{matNr}" th:readonly="${page_type} != 'new'">
+                            <input class="input" type="number" required="required" placeholder="12345678" th:field="*{matNr}" th:readonly="${page_type} != 'new'">
                         </div>
                     </div>
                     <div class="field">
